--- a/css/main.css
+++ b/css/main.css
@@ -34,3 +34,13 @@ body{
 #result,.tip{
     margin-top: 10px;
 }
+a {
+	text-decoration: none; /* 去除默认的下划线 */
+	outline: none;	/* 去除旧版浏览器的点击后的外虚线框 */
+}
+
+#ico_de,#ico_en{
+	text-decoration: none; /* 去除默认的下划线 */
+	outline: none;	/* 去除旧版浏览器的点击后的外虚线框 */
+	color: #000;	/* 去除默认的颜色和点击后变化的颜色 */
+}
